# Amazon_Scraping

./: assignment1.csv  assignment1.py  pyproject.toml  readme.txt  requirements.txt
