[tool.poetry]
name = "web scrap <amazon>"
version = "0.1.0"
description = ""
authors = ["John Baby"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
html5lib = "^1.1"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
